--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:prod":"node index.js",
+    "start":"nodemon -e js,ejs",
     "pretest": "cross-env NODE_ENV=test npx sequelize-cli db:drop && cross-env NODE_ENV=test npx sequelize-cli db:create",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
     "prepare": "husky install"
@@ -12,14 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
     "pq": "^0.0.3",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2",
-    "supertest": "^7.0.0",
-    "cross-env": "^7.0.3"   
+    "supertest": "^7.0.0"
   }
 }
