--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -26,5 +26,9 @@
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres"
   }
 }
