--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -17,6 +17,7 @@
     "username": "postgres",
     "password": "postgres",
     "database": "wd_todo_prod",
+    "use_env_variable": "DATABASE_URL",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
