--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -13,9 +13,17 @@
   "author": "Meghana",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "csurf": "^1.10.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.x.x",
     "sequelize": "^6.37.3"
   },
